# code/backend/metiche/rest/server/openapi.yaml
@@ -6909,6 +6909,9 @@ components:
                 updated_at:
                     format: date-time
                     type: string
+                wording_revision:
+                    format: int64
+                    type: integer
             required:
                 - id
                 - team_uuid
@@ -6922,6 +6925,7 @@ components:
                 - revision
                 - created_at
                 - updated_at
+                - wording_revision
             type: object
         IntentKind:
             enum:
